refactor: Corracao da classe MedicController e PatientController